--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/image/atzne-snap.png">
     <title>Enzo - Page</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="crossorigin="anonymous">
 </head>
 <body>
@@ -14,7 +13,7 @@
         <nav></nav>
     </header>
     <section class="main">
-        <img src="assets/image/enzo.jpg" alt="" srcset="">
+        <img src="enzo.jpg" alt="" srcset="">
         <span>Enzo CLT</span>
         <p>Inutile de me présenter ? bref ajoute moi</p>
         <ul>
