--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Inutile de me présenter ? bref ajoute moi</p>
         <ul>
             <li><a target="_blank" href="https://t.snapchat.com/oVgX4rOJ"><i class="fab fa-snapchat"></i></a></li>
-            <li><a target="_blank" href="https://instagram.com/enzo.uhq"><i class="fab fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://instagram.com/atzne"><i class="fab fa-instagram"></i></a></li>
             <li><a target="_blank" href="https://www.tiktok.com/@zozi.uhq"><i class="fab fa-tiktok"></i></a></li>
         </ul>
     </section>
