--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <section class="main">
         <img src="enzo.jpg" alt="" srcset="">
         <span>Enzo CLT</span>
-        <p>Inutile de me présenter ? bref ajoute moi</p>
+        <p>Inutile d'me présenter c'est moi de la 211.</p>
         <ul>
             <li><a target="_blank" href="https://t.snapchat.com/oVgX4rOJ"><i class="fab fa-snapchat"></i></a></li>
-            <li><a target="_blank" href="https://instagram.com/atzne"><i class="fab fa-instagram"></i></a></li>
-            <li><a target="_blank" href="https://www.tiktok.com/@zozi.uhq"><i class="fab fa-tiktok"></i></a></li>
+            <li><a target="_blank" href="https://instagram.com/zozi.calvet"><i class="fab fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://www.tiktok.com/@cltenzo"><i class="fab fa-tiktok"></i></a></li>
         </ul>
     </section>
 </body>
